Kubernetes-world/3-tier-app/k8s-kind/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-app
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
