Kubernetes-world/3-tier-app/k8s-kind/manifests/22-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: quiz-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
