Kubernetes-world/3-tier-app/k8s-kind/manifests/32-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: quiz-app
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
